rendered/envs/alpha/fluidd/service-fluidd.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: fluidd
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
