rendered/envs/alpha/fluidd/ingressroute-fluidd-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: fluidd-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`fluidd.lan.zebradil.dev`) || Host(`fluidd.junior.lan.zebradil.dev`) || Host(`fluidd.zebradil.dev`) || Host(`fluidd.junior.zebradil.dev`)
      services:
        - name: fluidd
          port: http
