rendered/envs/alpha/fluidd/ingressroute-fluidd-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: fluidd-vpn
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`fluidd.ts.zebradil.dev`) || Host(`fluidd.junior.ts.zebradil.dev`)
      services:
        - name: fluidd
          port: http
